<resources>
    <string name="app_name">Roller</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Titles -->
    <string name="signUpTitle">Sign Up</string>
    <string name="logo">logo</string>
    <string name="bidTitle">Enter a bid</string>

    <!-- Form Hints -->
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="emailHint">Email</string>
    <string name="phoneHint">Phone</string>
    <string name="passwordHint">Password</string>
    <string name="billingAddressHint">Billing Address</string>
    <string name="shippingAddressHint">Shipping Address</string>
    <string name="navbarSearchHint">Search</string>
    <string name="paymentMethodHint">Iban</string>
    <string name="bidAmount">Bid amount</string>

    <!-- Buttons -->
    <string name="signUpButton">Sign Up</string>
    <string name="logInButton">Log In</string>
    <string name="navbarCloseButton">X</string>
    <string name="profileDeleteButton">Delete profile</string>
    <string name="profileAddPaymentMethodButton">Add Payment Method</string>
    <string name="navbarLogOutButton">Log Out</string>
    <string name="bidButton">Place Bid</string>

    <!-- Starting screen -->
    <string name="startingScreenWelcomeText">Welcome to the Roller app!</string>

    <!-- Navbar -->
    <string name="navbarTitle">Menu</string>
    <string name="carListingsNavItem">Car listings</string>
    <string name="profileNavItem">Profile</string>
    <string name="watchlistNavItem">Watch list</string>
    <string name="recentlySoldNavItem">Recently Sold</string>
    <string name="createListingNavItem">Create Listing</string>

    <!-- Car Info Page Titles -->
    <string name="carInfoMakeTitle">Make:</string>
    <string name="carInfoModelTitle">Model:</string>
    <string name="carInfoYearTitle">Year:</string>
    <string name="carInfoMileagesTitle">Mileages:</string>

    <!-- Default car data value -->
    <string name="carInfoDataDefaultValue"></string>
    <string name="transmission">Transmission</string>
    <string name="type">Type</string>
    <string name="auctions">Auctions</string>

    <!-- Profile Page Titles -->
    <string name="profileTitle">Account</string>
    <string name="profileFirstNameTitle">First Name:</string>
    <string name="profileLastNameTitle">Last Name:</string>
    <string name="profileEmailTitle">Email:</string>
    <string name="profilePhoneTitle">Phone:</string>
    <string name="profileBillingAddressTitle">Billing Address:</string>
    <string name="profileShippingAddressTitle">Shipping Address:</string>
    <string name="profilePaymentMethodTitle">Payment Method:</string>

    <!-- Default profile data value -->
    <string name="accountInfoDataDefaultValue"></string>

    <!--Create Lisings Page -->
    <string name="createListingPageTitle">Create Listing</string>
    <string name="createListingTitle">Title</string>
    <string name="createListingDescription">Description</string>
    <string name="createListingOpeningBid">Opening Bid</string>
    <string name="createListingDuration">Duration</string>

    <string name="createListingAboutCar">About Car</string>
    <string name="createListingMake">Make</string>
    <string name="createListingModel">Model</string>
    <string name="createListingTrim">Trim</string>
    <string name="createListingEngine">Engine</string>
    <string name="createListingCondition">Condition</string>
    <string name="createListingMileage">Mileage</string>
    <string name="createListingColor">Color</string>
    <string name="createListingImageLink">Image Link</string>

    <string name="createListingButton">+</string>

    <!-- Listing Item -->
    <string name="listingItemDataValue"></string>

</resources>