<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundColor"
>

    <TextView
        android:id="@+id/signUpTitle"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/signUpTitle"
        android:textSize="30sp"
        android:textColor="#3A3A3D"
        />

    <EditText
        android:id="@+id/signUpFirstName"
        android:minHeight="48dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signUpTitle"
        android:gravity="center"
        android:background="@drawable/input_field_rectangle_border_rounded_corners"
        android:padding="4dp"
        android:hint="@string/firstNameHint"
        android:autofillHints="name"
        android:textColorHint="#515151"
        android:textColor="#515151"
        android:inputType="text"/>

    <EditText
        android:id="@+id/signUpLastName"
        android:minHeight="48dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signUpFirstName"
        android:gravity="center"
        android:background="@drawable/input_field_rectangle_border_rounded_corners"
        android:padding="4dp"
        android:hint="@string/lastNameHint"
        android:autofillHints="name"
        android:textColorHint="#515151"
        android:textColor="#515151"
        android:inputType="text"/>

    <EditText
        android:id="@+id/signUpEmail"
        android:minHeight="48dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signUpLastName"
        android:gravity="center"
        android:background="@drawable/input_field_rectangle_border_rounded_corners"
        android:padding="4dp"
        android:hint="@string/emailHint"
        android:autofillHints="emailAddress"
        android:textColorHint="#515151"
        android:textColor="#515151"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/signUpEmailConfirmation"
        android:minHeight="48dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signUpEmail"
        android:gravity="center"
        android:background="@drawable/input_field_rectangle_border_rounded_corners"
        android:padding="4dp"
        android:hint="@string/emailConfirmationHint"
        android:autofillHints="emailAddress"
        android:textColorHint="#515151"
        android:textColor="#515151"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/signUpPassword"
        android:minHeight="48dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signUpEmailConfirmation"
        android:gravity="center"
        android:background="@drawable/input_field_rectangle_border_rounded_corners"
        android:padding="4dp"
        android:hint="@string/passwordHint"
        android:autofillHints="password"
        android:textColorHint="#515151"
        android:textColor="#515151"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/signUpPasswordConfirmation"
        android:minHeight="48dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signUpPassword"
        android:gravity="center"
        android:background="@drawable/input_field_rectangle_border_rounded_corners"
        android:padding="4dp"
        android:hint="@string/passwordConfirmationHint"
        android:autofillHints="password"
        android:textColor="#515151"
        android:textColorHint="#515151"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signUpPasswordConfirmation"
        android:gravity="center"
        android:background="@drawable/button_border_rounded_corners"
        android:text="@string/signUpButton"
        android:textColor="#515151"/>

</RelativeLayout>